--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -178,24 +178,20 @@
   font-family: monospace;
 }
 body {
-  background: #ececec;
   direction: rtl;
 }
 .main-nput {
-  min-height: 35px;
-  border: 2px solid #1b3352;
+  max-height: 35px;
+  border: 1px solid #1b3352;
   border-radius: 0.375rem;
   font-size: 16px !important;
-  padding: 10px 40px 10px 18px !important;
+  padding: 10px 18px 10px 18px !important;
   color: #1b3352;
   background-color: transparent;
 }
 .main-nput::placeholder {
   color: #1b3352;
   font-size: 15px;
-}
-.main-nput:focus {
-  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
 }
 .main-nputError:focus {
   box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25) !important;
