--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -172,7 +172,7 @@
   padding: 0px;
 }
 *:not(:lang(en)) {
-  font-family: Cairo;
+  font-family: Arial;
 }
 *:lang(en) {
   font-family: monospace;
@@ -193,10 +193,12 @@ body {
   color: #1b3352;
   font-size: 15px;
 }
-.main-nputError:focus {
+.main-nputError {
   box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25) !important;
 }
-
+.main-nputError:focus {
+  box-shadow: 0 0 0 0.25rem rgba(38, 69, 206, 0.25) !important;
+}
 .login-background {
   position: fixed;
   top: 0;
