--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -215,11 +215,15 @@ body {
     background: linear-gradient(45deg, #d1c4e9, #e1bee7, #ffcdd2, #f8bbd0);
   }
 }
+body{
+  height: 100vh;
+}
 .dashboard-background {
   background: url(../../public/images/dashboard-background.svg);
   background-position: center;
   background-repeat: repeat;
   background-size: cover;
+  height: 100%;
 }
 .base-Popper-root .MuiChartsTooltip-root {
   direction: ltr;
